# stackInABox

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.rst  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-gh-actions.yml
docs/: Makefile  __init__.py  conf.py  index.rst  make.bat
docs/api/: index.rst  stack-exceptions.rst  stack.rst
docs/changes/: 0.1.rst  0.10.rst  0.11.rst  0.12.rst  0.2.rst  0.3.rst  0.4.rst  0.5.rst  0.6.rst  0.7.rst  0.8.rst  0.9.rst  index.rst  latest.rst
docs/community/: about.rst  contribute.rst  faq.rst  help.rst  index.rst
docs/user/: index.rst  install.rst  intro.rst  quickstart.rst  tutorial-first-step.rst  tutorial-second-step.rst  tutorial.rst
stackinabox/: __init__.py  httpretty.py  responses.py  stack.py  util_httpretty.py  util_requests_mock.py  util_responses.py
stackinabox/services/: __init__.py  exceptions.py  router.py  service.py
stackinabox/test/: test_advanced.py  test_basic.py  test_keystone.py
stackinabox/tests/: __init__.py  test_advanced.py  test_basic.py  test_httpretty.py  test_httpretty_decorator.py  test_keystone.py  test_requests_mock.py  test_requests_mock_decorator.py  test_responses.py  test_responses_decorator.py  test_service.py  test_stack.py  test_utils_deprecator.py  test_version.py
stackinabox/util/: deprecator.py  httpretty.py  requests_mock.py  (+1 more)
tests/: base.py  test_service.py  test_stack.py  test_version.py
tools/: docs-requirements.txt  pep8-requirements.txt  py2-test-requirements.txt  test-requirements.txt
(+44 files in other folders)
