[nosetests]
match=^test
where=tests
with-coverage=true
cover-package=stackinabox
cover-erase=1
cover-inclusive=true
cover-branches=true
cover-min-percentage=92

[metadata]
name = stackinabox
url = https://github.com/TestInABox/stackInABox
version = attr: stackinabox.version
author = Benjamen R. Meyer
author_email = bm_witness@yahoo.com
description = RESTful API Testing Suite
long_description = file: README.rst, CONTRIBUTING.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing

[options]
zip_safe = True
packages = find:
install_requires =
    six

[options.extras_require]
httpretty = httpretty==1.1.4
requests-mock = requests-mock
responses = responses>=0.4.0

[options.packages.find]
exclude =
    test*
    stackinabox/tests
